update useFunctionOnKey data, fixed CodeBlock line numbers gap

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -154,7 +154,6 @@ svg {
 
 .linenumber {
   color: var(--codeBlockLinesNumbersColor) !important;
-  min-width: 20px !important;
   padding-right: 30px !important;
   font-style: normal !important;
 }
